Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89645

[REG 5.15.2 -> 6.0.0] windeployqt deploys VCRedist regardless of --no-compiler-runtime

    XMLWordPrintable

Details

    • Windows
    • 317c2b4af885f854a30235959565e0af8376d64f (qt/qttools/dev) f4363ec1eb9d638f04a8b3abec85ebddde0749a3 (qt/qttools/6.0)

    Description

      My project invokes windeployqt with the --no-compiler-runtime flag to avoid populating the deployment directory with compiler runtime binaries. This broke in Qt 6.0.0, and now the flag appears to be ignored and C runtime binaries are always placed in the deployment directory.

      Steps to reproduce:
      1. Build one of the example projects with Qt 6.0.0 (I used coffee)
      2. Open the "Qt 6.0.0 (MSVC 2019 64-bit) Command Prompt" window
      3. Set VCINSTALLDIR environment variable as appropriate (mine is "C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC")
      4. Run "windeployqt --release --dir C:\temp\coffee --no-compiler-runtime coffee.exe" (or point to your chosen example binary as appropriate)

      Expected results:

      • vcredist_x64.exe should not be present in deployment directory due to --no-compiler-runtime flag

      Actual results:

      • vcredist_x64.exe is copied to deployment directory despite --no-compiler-runtime flag

      Log output (trimmed):

      C:\Qt\Examples\Qt-6.0.0\demos\coffee>windeployqt --dir C:\temp\coffee --no-compiler-runtime --release ..\build-coffee-Desktop_Qt_6_0_0_MSVC2019_64bit-Release\release\coffee.exe
      Creating C:\temp\coffee...
      C:\Qt\Examples\Qt-6.0.0\demos\build-coffee-Desktop_Qt_6_0_0_MSVC2019_64bit-Release\release\coffee.exe 64 bit, release executable [QML]
      Adding Qt6Svg for qsvgicon.dll
      Direct dependencies: Qt6Core Qt6Gui Qt6Qml
      All dependencies   : Qt6Core Qt6Gui Qt6Network Qt6Qml
      To be deployed     : Qt6Core Qt6Gui Qt6Network Qt6Qml Qt6Svg
      Updating Qt6Core.dll.
      Updating Qt6Gui.dll.
      Updating Qt6Network.dll.
      Updating Qt6Qml.dll.
      Updating Qt6Svg.dll.
      Updating opengl32sw.dll.
      Updating D3Dcompiler_47.dll.
      Updating vc_redist.x64.exe.
      Creating directory C:/temp/coffee/iconengines.
      Updating qsvgicon.dll.
      Creating directory C:/temp/coffee/imageformats.
      Updating qgif.dll.
      Updating qico.dll.
      Updating qjpeg.dll.
      Updating qsvg.dll.
      Creating directory C:/temp/coffee/platforms.
      Updating qwindows.dll.
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            cgutman Cameron Gutman
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes