windeployqt: Do not unconditionally deploy compiler runtime

Remove the code introduced by
cc67bbbee6386c10c8282b3ea02f6db654d60c1e setting the option to true.

Pick-to: 6.0
Fixes: QTBUG-89645
Change-Id: Iac94ef9e5beff6fc0b7d48f5afafa16a220cbd99
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>